@@ -2,4 +2,5 @@ from GC_file import *
 from GC_createfile import *
 from GC_loadfile import *
 from GC_readlines import *
+from GC_epoch import *
 from GC_profile import *
