@@ -1,3 +1,3 @@
-cpt_DATA = gthf.cpt ice.cpt litho_temp.cpt mb.cpt rsl_res.cpt surf_temp.cpt temp.cpt topo.cpt velo.cpt eismint2.data
+cpt_DATA = gthf.cpt ice.cpt litho_temp.cpt mb.cpt rsl_res.cpt surf_temp.cpt temp.cpt topo.cpt velo.cpt eismint2.data stages
 cptdir = $(pkgdatadir)
 dist_cpt_DATA = $(cpt_DATA)
